cluster/apps/default/adguard/adguard-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard1-external
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: adguard1-external
  namespace: default
subsets:
  - addresses:
      - ip: 10.0.103.62
    ports:
      - name: http
        port: 80
        protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: adguard2-external
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: adguard2-external
  namespace: default
subsets:
  - addresses:
      - ip: 10.0.103.63
    ports:
      - name: http
        port: 80
        protocol: TCP
