cluster/apps/default/adguard/adguard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard1
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    kubernetes.io/ingress.class: nginx
    hajimari.io/enable: "true"
    hajimari.io/icon: "cancel"
spec:
  tls:
    - hosts:
        - adguard1.${SECRET_DOMAIN}
      secretName: adguard1-tls
  rules:
    - host: adguard1.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard1-external
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard2
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    kubernetes.io/ingress.class: nginx
    hajimari.io/enable: "true"
    hajimari.io/icon: "cancel"
spec:
  tls:
    - hosts:
        - adguard2.${SECRET_DOMAIN}
      secretName: adguard2-tls
  rules:
    - host: adguard2.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard2-external
                port:
                  number: 80
